# phonelib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: formatting_benchmark.rs  parsing_benchmark.rs  phone_benchmark.rs
benches/competitors/: format_bench.rs  parsing_bench.rs
src/: constants.rs  definitions.rs  lib.rs  main.rs
src/tests/: mod.rs
