[package]
name = "phonelib"
version = "0.2.0"
edition = "2021"
authors = ["Mohamad Al Zohbie <alzoubi528@gmail.com>"]
repository = "https://github.com/mohamadzoh/phonelib"
description = "A library that helps you work with phone numbers"
license = "MIT"
keywords = ["phone", "validate", "libphonenumber-rs", "phonelib","number"]

[lib]
name = "phonelib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Add your dependencies here

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "phone_benchmark"
harness = false
