[package]
name = "phonelib"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Mohamad Al Zohbie <alzoubi528@gmail.com>"]
repository = "https://github.com/mohamadzoh/phonelib"
homepage = "https://github.com/mohamadzoh/phonelib"
documentation = "https://docs.rs/phonelib"
description = "A comprehensive library for phone number validation, formatting, parsing, and manipulation"
license = "MIT"
readme = "README.md"
keywords = ["phone", "validation", "phonenumber", "e164", "international"]
categories = ["internationalization", "text-processing", "parsing"]
include = [
    "src/**/*",
    "benches/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[lib]
name = "phonelib"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "phone_benchmark"
harness = false

[badges]
maintenance = { status = "actively-developed" }
