[package]
name = "phonelib"
version = "1.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Mohamad Al Zohbie <alzoubi528@gmail.com>"]
repository = "https://github.com/mohamadzoh/phonelib"
homepage = "https://github.com/mohamadzoh/phonelib"
documentation = "https://docs.rs/phonelib"
description = "A comprehensive library for phone number validation, formatting, parsing, and manipulation"
license = "MIT"
readme = "README.md"
keywords = ["phone", "validation", "phonenumber", "e164", "international"]
categories = ["internationalization", "text-processing", "parsing"]
include = [
    "src/**/*",
    "benches/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[lib]
name = "phonelib"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
criterion = "0.8.2"
rlibphonenumber = "1.1.1"
phonenumber = "0.3.9"

[[bench]]
name = "phone_benchmark"
harness = false

[[bench]]
name = "competitors_format"
path = "benches/competitors/format_bench.rs"
harness = false

[[bench]]
name = "competitors_parse"
path = "benches/competitors/parsing_bench.rs"
harness = false

[profile.release]
lto = true
codegen-units = 1

[badges]
maintenance = { status = "actively-developed" }
